--- a/package.json
+++ b/package.json
@@ -1,22 +1,50 @@
 {
   "name": "cjc-funds-web",
+  "homepage": "https://carrickasset.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.8",
-    "@types/react": "16.9.3",
-    "@types/react-dom": "16.9.1",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.6.0",
+    "react-helmet": "^5.2.1",
+    "react-i18next": "^10.13.0",
+    "react-lazyload": "^2.6.2",
+    "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
-    "typescript": "3.6.3"
+    "source-map-explorer": "^2.1.0",
+    "webfontloader": "^1.6.28"
+  },
+  "devDependencies": {
+    "@types/history": "^4.7.3",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.8",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-helmet": "^5.0.10",
+    "@types/react-lazyload": "^2.5.0",
+    "@types/react-redux": "^7.1.3",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/webfontloader": "^1.6.29",
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
+    "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "json-loader": "^0.5.7",
+    "prettier": "^1.18.2",
+    "typescript": "^3.6.3"
   },
   "scripts": {
+    "postinstall": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,tsx,ts,css}\"",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": "react-app"
