--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "i18next": "^17.0.16",
     "i18next-browser-languagedetector": "^3.0.3",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
