--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-ga": "^2.6.0",
     "react-helmet": "^5.2.1",
     "react-i18next": "^10.13.0",
+    "react-lazy-images": "^1.1.0",
     "react-lazyload": "^2.6.2",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
