--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.6",
+    "babel-plugin-import": "^1.12.2",
     "bootstrap": "^4.3.1",
     "i18next": "^17.0.16",
     "i18next-browser-languagedetector": "^3.0.3",
