--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "highcharts": "^7.2.0",
+    "highcharts-react-official": "^2.2.2",
     "i18next": "^17.0.16",
     "i18next-browser-languagedetector": "^3.0.3",
     "node-sass": "^4.12.0",
