--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-lazyload": "^2.6.2",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
+    "react-tradingview-widget": "^1.3.2",
     "source-map-explorer": "^2.1.0",
     "webfontloader": "^1.6.28"
   },
