--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.6",
+    "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "bootstrap": "^4.3.1",
+    "formik": "^1.5.8",
     "i18next": "^17.0.16",
     "i18next-browser-languagedetector": "^3.0.3",
     "node-sass": "^4.12.0",
