--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "antd": "^3.23.6",
     "babel-plugin-import": "^1.12.2",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "4.1.3",
     "highcharts": "^7.2.0",
     "highcharts-react-official": "^2.2.2",
     "i18next": "^17.0.16",
