--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-i18next": "^10.13.0",
     "react-lazy-images": "^1.1.0",
     "react-lazyload": "^2.6.2",
+    "react-responsive-carousel": "^3.1.50",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.2",
     "react-tradingview-widget": "^1.3.2",
