--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.23.6",
-    "babel-plugin-import": "^1.12.2",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "4.1.3",
     "highcharts": "^7.2.0",
     "highcharts-react-official": "^2.2.2",
@@ -13,6 +12,7 @@
     "i18next-browser-languagedetector": "^3.0.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-app-polyfill": "^1.0.4",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-ga": "^2.6.0",
@@ -64,12 +64,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 11"
     ]
   }
 }
