--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
   "name": "cjc-funds-web",
   "homepage": "https://carrickasset.com",
-  "version": "0.1.27",
+  "version": "0.1.28",
   "private": true,
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "4.4.1",
-    "i18next": "^19.3.3",
+    "i18next": "^19.3.4",
     "i18next-browser-languagedetector": "^4.0.2",
     "node-sass": "^4.13.1",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.13.0",
+    "react-bootstrap": "^1.0.0",
+    "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
-    "react-i18next": "^11.3.3",
+    "react-i18next": "^11.3.4",
     "react-lazy-images": "^1.1.0",
-    "react-lazyload": "^2.6.5",
+    "react-lazyload": "^2.6.6",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "3.4.1",
     "react-tradingview-widget": "^1.3.2",
-    "source-map-explorer": "^2.4.0",
+    "source-map-explorer": "^2.4.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@types/history": "^4.7.5",
     "@types/jest": "^25.1.4",
-    "@types/node": "^13.9.1",
-    "@types/react": "^16.9.23",
+    "@types/node": "^13.9.5",
+    "@types/react": "^16.9.27",
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
     "@types/react-lazyload": "^2.6.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/webfontloader": "^1.6.29",
-    "@typescript-eslint/eslint-plugin": "^2.24.0",
-    "@typescript-eslint/parser": "^2.24.0",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "json-loader": "^0.5.7",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.2",
     "typescript": "^3.8.3"
   },
   "scripts": {
